# CMakeARM_Solution_Template

./: .gitignore  CMakeLists.txt  Makefile  README.md
CMakeTools/Compiler/ArmCompiler6/: BuildOptions.cmake  ToolChain.cmake
CMakeTools/Environment/: Build_Option.cmake  Build_Type.cmake  Profile.cmake  RulesOverride.cmake  ToolChain.cmake
CMakeTools/Environment/Core/: Cortex-M4.cmake
CMakeTools/Template/: Application.cmake  Binary.cmake  Library.cmake
source/App/TestApp_A/: CMakeLists.txt
source/Lib/STM32F3xx_HAL_Driver/: CMakeLists.txt
source/Lib/STM32F3xx_HAL_Driver/Inc/: stm32f3xx_hal_def.h
